--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <!-- Titulo de la web -->
   <title>Gatitu</title>
 
+  <!-- Más meta tags. Open graph -->
+  <meta property="og:title" content="La mejor página web">
+  <meta property="og:site_name" content="Gatitu">
+  <meta property="og:url" content="https://lubriongos.github.io/gatitu/">
+  <meta property="og:description" content="Primera página web de Lucia, de las mejores luego de realizar el curso Introducción a la programación de Le Wagon, poniendo en práctica todo lo visto. Muy pronto se seguirá superando.">
+  <meta property="og:type" content="article">
+  <meta property="og:image" content="https://github.com/lubriongos/gatitu/blob/master/imagen/twokittens.jpg?raw=true">
+  
   <!-- Fontawesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 
